fixed the scrollbar-Y not working

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -261,7 +261,7 @@ h2 {
   color: blue;
 }
 
-#show-like{
+.show-like{
   max-height: 100px;
   overflow-y: scroll;
 }
